# pjlink-rs232-bridge

./: .gitignore  Cargo.toml  LICENSE.md  README.md
definitions/: dell-1409x-m0r001.toml
src/: main.rs  rs232_bridge.rs  rs232_bridge_def.rs
