[package]
name = "pjlink-rs232-bridge"
version = "0.1.0"
edition = "2018"
authors = ["Mateus Meyer Jiacomelli <meyer@mateusmeyer.com.br>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pjlink-bridge = { path = "../pjlink-rs232-bridge" }
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
simple_logger = "1.11"
log = "0.4"
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
serialport = "4.0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'